# QuickPRS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.py  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
quickprs/: __init__.py  __main__.py  auto_setup.py  backup.py  binary_io.py  builder.py  cache.py  cheat_sheet.py  cleanup.py  cli.py  cloner.py  colors.py  comparison.py  completions.py  config_builder.py  csv_export.py  csv_import.py  demo.py  diff_report.py  export_formats.py  favorites.py  fleet.py  fleet_check.py  freq_tools.py  health_check.py  iden_library.py  injector.py  json_io.py  logger.py  main.py  option_differ.py  option_maps.py  profile_templates.py  prs_parser.py  prs_writer.py  radioreference.py  record_types.py  repair.py  reports.py  scanner_import.py  (+8 more)
tests/: conftest.py  test_advanced_editing.py  test_auto_iden_freq_validation.py  test_auto_setup.py  test_backup.py  test_binary_edge_cases.py  test_binary_io.py  test_builder.py  test_button_config.py  test_cache.py  test_calculator_toolbar_status.py  test_capacity.py  test_cleanup.py  test_cli.py  test_cli_comprehensive.py  test_cli_import.py  test_cli_inject.py  test_cli_list_bulk.py  test_cli_remove_edit_info.py  test_cli_set_option.py  test_clone_and_detail.py  test_cloner_renumber.py  test_comparison.py  test_comparison_parser.py  test_completions.py  test_config_builder.py  test_coverage_gaps.py  test_csv_export.py  test_csv_import.py  test_demo.py  test_diff_report.py  test_encryption_nac_priority.py  test_export_config.py  test_favorites.py  (+46 more)
(+21 files in other folders)
