[project]
name = "quickprs"
version = "1.0.1"
description = "Generate Harris XG-100P personality files without Harris RPM"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "zeep>=4.2",
]

[project.optional-dependencies]
gui = ["sv-ttk>=2.5", "darkdetect>=0.8", "windnd>=1.0.7"]
build = ["pyinstaller>=6.0"]

[project.scripts]
quickprs = "quickprs.cli:run_cli"
